--- a/public/css/routesMap.css
+++ b/public/css/routesMap.css
@@ -46,3 +46,10 @@
       height: 100%;
       overflow: auto;
   }
+  
+ table,th,td {
+    border: 1px solid black;
+    text-align: left;
+    padding-left: 5px;
+  } 
+  
