Map and login html pages merged

--- a/public/css/routesMap.css
+++ b/public/css/routesMap.css
@@ -65,4 +65,14 @@
       color: blue
   }
   
+  #userName,
+  #userOrigin,
+  #userType {
+      height: 30px;
+  }
+  
+  #userOrigin {
+      height: 30px;
+  }
+  
   ;
