Direct time and distance of the connected user calculated and displayed

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -59,8 +59,12 @@
       margin-bottom: 20px;
   }
   
+  #origin,
+  #dest,
   #directTime,
+  #directDistance,
   #detouredTime,
+  #detouredDistance,
   #difference {
       color: blue
   }
