--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,77 +1,136 @@
-  /* #map-canvas {
-      height: 500px
-  } */
-  
-  ;
-  #right-panel {
-      font-family: 'Roboto', 'sans-serif';
-      line-height: 30px;
-      padding-left: 10px;
-  }
-  
-  #right-panel select,
-  #right-panel input {
-      font-size: 15px;
-  }
-  
-  #right-panel select {
-      width: 100%;
-  }
-  
-  #right-panel i {
-      font-size: 12px;
-  }
-  
-  html,
-  body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-  }
-  
-  #map-canvas {
-      height: 100%;
-      float: left;
-      width: 63%;
-      height: 100%;
-  }
-  
-  #right-panel {
-      float: right;
-      width: 34%;
-      height: 100%;
-  }
-  
-  .panel {
-      height: 100%;
-      overflow: auto;
-  }
-  
-  th,
-  td {
-      border: 1px solid black;
-      border-style: solid;
-      text-align: left;
-      height: 20px;
-  }
-  
-  table {
-      margin: 5px;
-      margin-bottom: 20px;
-  }
-  
-  #userName,
-  #userOrigin,
-  #userType {
-      height: 30px;
-  }
-  
-  #userOrigin {
-      height: 30px;
-  }
-  
-  .profile {
-      display: none;
-  }
-  
-  ;
+    #right-panel #signIn {
+        position: static;
+        width: 95%;
+        margin: 1%;
+        margin-top: 20px;
+    }
+    
+    #right-panel {
+        font-family: 'Roboto', 'sans-serif';
+        line-height: 30px;
+    }
+    
+    #right-panel select,
+    #right-panel input {
+        font-size: 15px;
+    }
+    
+    #right-panel select {
+        width: 100%;
+    }
+    
+    #right-panel i {
+        font-size: 12px;
+    }
+    
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+    main {
+        height: 100%;
+        width: 100%;
+        top: 82px;
+        position: absolute;
+    }
+    
+    #map-canvas {
+        height: 100%;
+        float: left;
+        width: 63%;
+    }
+    
+    #right-panel {
+        float: right;
+        width: 37%;
+        height: 100%;
+    }
+    
+    .panel {
+        height: 100%;
+        overflow: auto;
+    }
+    
+    th,
+    td {
+        border: 1px solid black;
+        border-style: solid;
+        text-align: left;
+        height: 20px;
+    }
+    
+    table {
+        margin: 5px;
+        margin-bottom: 20px;
+    }
+    
+    #firstName,
+    #userName,
+    #userType {
+        height: 30px;
+    }
+    
+    #userOrigin {
+        height: 30px;
+    }
+    
+    .profile {
+        display: none;
+    }
+    
+    profile {
+        display: none;
+    }
+    
+    #list,
+    #select {
+        float: left;
+        width: 85%;
+        height: 100%;
+        margin-left: 10px;
+    }
+    
+    #welcome {
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+    
+    @media screen and (max-width: 690px) {
+        main {
+            top: 112px;
+        }
+        #map-canvas {
+            height: 65%;
+            width: 100%;
+        }
+        #right-panel {
+            width: 100%;
+            height: 35%;
+        }
+        #right-panel #signIn {
+            width: 98%;
+            margin: auto;
+            padding: 5px;
+            margin-top: 2px;
+        }
+        #firstName,
+        #userName,
+        #userType {
+            margin: 3px 0 3px 0;
+        }
+    }
+    
+    @media screen and (max-width: 695px) {
+        main {
+            top: 145px;
+        }
+        #map-canvas {
+            height: 60%;
+        }
+        #right-panel {
+            height: 40%;
+        }
+    }
