--- a/views/passenger.handlebars
+++ b/views/passenger.handlebars
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passenger register</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-
-<body>
-    <!--  Header -->
+ <!--  Header -->
     <nav class="top-bar topbar-responsive">
         <!-- Company name -->
         <div class="top-bar-title">
@@ -72,7 +55,10 @@
         <input class="button expanded" type="submit" value="Sign up ">
     </form>
 
+    <!-- Passenger registration form submission handling -->
     <script src="js/passenger.js"></script>
-</body>
 
-</html>
+    <!-- Foundation framework css  -->
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
