buttons hyperlinks update

--- a/views/driver.handlebars
+++ b/views/driver.handlebars
@@ -12,15 +12,15 @@
             <div class="top-bar-right">
                 <ul class="menu simple medium-horizontal">
                     <li>
-                        <a href="http://localhost:8080/">Home</a></li>
+                        <a href="/">Home</a></li>
                     <li>
-                        <a href="http://localhost:8080/profile">Sign in</a>
+                        <a href="/profile">Sign in</a>
                     </li>
                     <li>
-                        <a href="http://localhost:8080/driver">Driver register</a>
+                        <a href="/driver">Driver register</a>
                     </li>
                     <li>
-                        <a href="http://localhost:8080/passenger">Passenger register</a>
+                        <a href="/passenger">Passenger register</a>
                     </li>
                     <li>
                         <button type="button " class="button hollow topbar-responsive-button ">Contact us</button>
