buttons hyperlinks update

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,9 +35,9 @@
             <h1>DCC</h1>
             <h2>Daily Commuter Carpool</h2>
             <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
-            <a href="http://localhost:8080/passenger" class="button button-rounded-hover1 ">Join as <br> a <br> Passenger</a>
-            <a href="http://localhost:8080/driver" class="button button-rounded-hover2 ">Join as<br> a <br> Driver</a>
-            <a href="http://localhost:8080/profile" class="button button-rounded-hover3" style="line-height: 1.5;">User<br>Sign in</a>
+            <a href="/passenger" class="button button-rounded-hover1 ">Join as <br> a <br> Passenger</a>
+            <a href="/driver" class="button button-rounded-hover2 ">Join as<br> a <br> Driver</a>
+            <a href="/profile" class="button button-rounded-hover3" style="line-height: 1.5;">User<br>Sign in</a>
         </div>
     </div>
 
